--- a/Finsys/Finsys_App/templates/company/Fin_Add_Item.html
+++ b/Finsys/Finsys_App/templates/company/Fin_Add_Item.html
@@ -23,16 +23,30 @@
         border-radius: 0.5rem;
         position: relative
     }
-
+    .radius-15{
+        border-radius: 15px;
+    }
 </style>
 
-<div class="page-content">
+<div class="page-content mt-0 pt-0">
+    <div class="d-flex justify-content-end mb-1">
+        <a href="{% url 'Fin_items' %}"><i class="fa fa-times-circle text-white mx-4 p-1" style="font-size: 1.2rem;margin-right: -0rem !important;"></i></a>
+      </div>
+    <div class="card radius-15 h-20">
+        <div class="row">
+          <div class="col-md-12">
+            <center><h2 class="mt-3">ADD ITEM</h2></center>
+            <hr/>
+          </div>
+        </div>
+      </div>
+
     <div class="card radius-15">
         <div class="card-body">
             <div class="row">
                 <div class="col-12 col-lg-12 col-xl-12">
                     <!-- <span class="d-flex justify-content-end p-2" style="cursor: pointer;" onclick="javascript:window.history.back()"><i class="fa fa-times text-white" style="font-size: 1.2rem;"></i></span> -->
-                    <div class="card" style="background-color: #2a4964;">
+                    <!-- <div class="card" style="background-color: #2a4964;">
                         <div class="row no-gutters">
                             <div class="col-md-2"></div>
                             <div class="col-md-8 mt-4 mb-4">
@@ -42,7 +56,7 @@
                             </div>
                             <div class="col-md-2"></div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <form action="{% url 'Fin_createNewItem' %}" method="post" class="needs-validation"  validate>
