--- a/Finsys/Finsys_App/templates/company/Fin_Add_Purchase_Order.html
+++ b/Finsys/Finsys_App/templates/company/Fin_Add_Purchase_Order.html
@@ -516,7 +516,7 @@
         <div class="modal-content" style="background-color: #213b52;">
             <div class="modal-header">
                 <h5 class="m-3">New Customer Payment Term</h5>
-                <button type="button" class="close" data-toggle="modal" data-target="#newCustomer" aria-label="Close">
+                <button type="button" class="close"data-dismiss="modal" data-toggle="modal" data-target="#newCustomer" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -943,7 +943,7 @@
         <div class="modal-content" style="background-color: #213b52;">
             <div class="modal-header">
                 <h5 class="m-3">New Vendor Payment Term</h5>
-                <button type="button" class="close" data-toggle="modal" data-target="#newVendor" aria-label="Close">
+                <button type="button" class="close"data-dismiss="modal" data-toggle="modal" data-target="#newVendor" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -1381,7 +1381,7 @@
         <div class="modal-content" style="background-color: #213b52;">
             <div class="modal-header">
                 <h5 class="m-3">New Item Unit</h5>
-                <button type="button" class="close" data-toggle="modal" data-target="#newItem" aria-label="Close">
+                <button type="button" class="close"data-dismiss="modal" data-toggle="modal" data-target="#newItem" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -1415,7 +1415,7 @@
         <div class="modal-content" style="background-color: #213b52;">
             <div class="modal-header">
                 <h5 class="m-3">New Account</h5>
-                <button type="button" class="close" data-toggle="modal" data-target="#newItem" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal"data-toggle="modal" data-target="#newItem" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -3280,10 +3280,12 @@ $(document).on("click","#saveVendorPaymentTerm",function(){
             errorText.innerText = "HSN must contain at least 6 digits";
             hsnField.setCustomValidity("HSN must contain at least 6 digits");
             hsnField.style.borderColor = "red";
+            return false
         } else {
             errorText.innerText = "";
             hsnField.setCustomValidity(""); 
             hsnField.style.borderColor = ""; 
+            return true
         }
     }
 
