--- a/Finsys/Finsys_App/templates/company/Fin_Attendance.html
+++ b/Finsys/Finsys_App/templates/company/Fin_Attendance.html
@@ -40,7 +40,7 @@
 
             <a href="{% url 'Fin_Add_Attendance' %}" class="ml-1"></i><button type="button"
                 class="btn btn-outline-secondary text-grey"><i class="fa fa-plus font-weight-light"></i>
-                New</button></a>
+                Attendance</button></a>
           </div>
         </div>
       </div>
