--- a/Finsys/Finsys_App/templates/company/Fin_Bankholders.html
+++ b/Finsys/Finsys_App/templates/company/Fin_Bankholders.html
@@ -40,7 +40,7 @@
                 <a class="dropdown-item status-filter" data-status="inactive"style="font-size: 14px;">Inactive</a>
               </div>
             </div>
-            <a href="{% url 'Fin_addbank' %}" class="ml-1"></i><button type="button" class="btn btn-outline-secondary text-grey"><i class="fa fa-plus font-weight-light"></i> Add BankHolder</button></a>
+            <a href="{% url 'Fin_addbank' %}" class="ml-1"></i><button type="button" class="btn btn-outline-secondary text-grey"><i class="fa fa-plus font-weight-light"></i>  BankHolder</button></a>
           </div>
         </div>
       </div>
