--- a/Finsys/Finsys_App/templates/company/Fin_ChartOfAccounts.html
+++ b/Finsys/Finsys_App/templates/company/Fin_ChartOfAccounts.html
@@ -37,7 +37,7 @@
                           <a class="dropdown-item" style="color: white;cursor: pointer;" onclick="filterTable(3,'inactive')">Inactive</a>
                         </div>
                       </div>
-                    <a href="{% url 'Fin_addAccount' %}" style="color: #fff;" class="btn btn-outline-secondary ml-1" ><i class="fa fa-plus"></i> New Account</a>
+                    <a href="{% url 'Fin_addAccount' %}" style="color: #fff;" class="btn btn-outline-secondary ml-1" ><i class="fa fa-plus"></i>  Account</a>
                 </div>
             </div>
             <div class="row mt-3">
