--- a/Finsys/Finsys_App/templates/company/Fin_Debit_Note_Edit.html
+++ b/Finsys/Finsys_App/templates/company/Fin_Debit_Note_Edit.html
@@ -1189,7 +1189,7 @@
         <div class="modal-content" style="background-color: #213b52;">
             <div class="modal-header">
                 <h5 class="m-3">New Item Unit</h5>
-                <button type="button" class="close" data-toggle="modal" data-target="#newItem" aria-label="Close">
+                <button type="button" class="close"data-dismiss="modal" data-toggle="modal" data-target="#newItem" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -1223,7 +1223,7 @@
         <div class="modal-content" style="background-color: #213b52;">
             <div class="modal-header">
                 <h5 class="m-3">New Account</h5>
-                <button type="button" class="close" data-toggle="modal" data-target="#newItem" aria-label="Close">
+                <button type="button" class="close"data-dismiss="modal" data-toggle="modal" data-target="#newItem" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -3030,7 +3030,7 @@ function reloadItems() {
         <div class="modal-content" style="background-color: #213b52;">
             <div class="modal-header">
                 <h5 class="m-3">New Vendor Payment Term</h5>
-                <button type="button" class="close" data-dismiss="modal"  data-target="#newVendor" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" onclick="$('#newVendor').modal('show')"  data-target="#newVendor" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
