--- a/Finsys/Finsys_App/templates/company/Fin_Debit_Note_List.html
+++ b/Finsys/Finsys_App/templates/company/Fin_Debit_Note_List.html
@@ -70,7 +70,7 @@
                 <a class="dropdown-item" style="height: 40px; font-size: 15px; color: white;cursor: pointer;" onclick="filterTable(6,'Saved')">Save</a>
               </div>
             </div>
-            <a href="{% url 'Fin_debitnoteadd' %}" class="ml-1"></i><button type="button" class="btn btn-outline-secondary text-grey"><i class="fa fa-plus font-weight-light"></i> New</button></a>
+            <a href="{% url 'Fin_debitnoteadd' %}" class="ml-1"></i><button type="button" class="btn btn-outline-secondary text-grey"><i class="fa fa-plus font-weight-light"></i> Debit Note</button></a>
           </div>
         </div>
       </div>
