--- a/Finsys/Finsys_App/templates/company/Fin_EditPaymentMade.html
+++ b/Finsys/Finsys_App/templates/company/Fin_EditPaymentMade.html
@@ -342,7 +342,7 @@
         <div class="modal-content" style="background-color: #213b52;">
             <div class="modal-header">
                 <h5 class="m-3">New Vendor Payment Term</h5>
-                <button type="button" class="close" data-toggle="modal" data-target="#newVendor" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal"data-toggle="modal" data-target="#newVendor" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
