--- a/Finsys/Finsys_App/templates/company/Fin_Ewaybills.html
+++ b/Finsys/Finsys_App/templates/company/Fin_Ewaybills.html
@@ -39,7 +39,7 @@
                 <a class="dropdown-item" style="height: 40px; font-size: 15px; color: white;cursor: pointer;" onclick="filterTable(6,'saved')">Saved</a>
               </div>
             </div>
-            <a href="{% url 'Fin_load_CreateEwaybill' %}" class="ml-1"><button type="button" class="btn btn-outline-secondary text-grey"><i class="fa fa-plus font-weight-light"></i> NEW E-WAY BILL</button></a>
+            <a href="{% url 'Fin_load_CreateEwaybill' %}" class="ml-1"><button type="button" class="btn btn-outline-secondary text-grey"><i class="fa fa-plus font-weight-light"></i> E-WAY BILL</button></a>
           </div>
         </div>
       </div>
