--- a/Finsys/Finsys_App/templates/company/Fin_Expense.html
+++ b/Finsys/Finsys_App/templates/company/Fin_Expense.html
@@ -49,12 +49,12 @@
       <table class="table table-responsive-md table-hover mt-4 expenseTable" id="expenseTable" style="text-align: center">
         <thead>
           <tr>
-            <th>Date</th>
-            <th>Expense Account</th>
-            <th>Expense Type</th>
-            <th>Payment Method</th>
-            <th>Amount</th>
-            <th>Status</th>
+            <th class="text-uppercase">Date</th>
+            <th class="text-uppercase">Expense Account</th>
+            <th class="text-uppercase">Expense Type</th>
+            <th class="text-uppercase">Payment Method</th>
+            <th class="text-uppercase">Amount</th>
+            <th class="text-uppercase">Status</th>
           </tr>
         </thead>
         <tbody>
