--- a/Finsys/Finsys_App/templates/company/Fin_Recurring_Bill_Edit_Page.html
+++ b/Finsys/Finsys_App/templates/company/Fin_Recurring_Bill_Edit_Page.html
@@ -72,7 +72,8 @@
         var isDuplicate = checkUniqueHSN();
         var quan = checkQuantity();
         if (isDuplicate) {
-            alert("Duplicate Items found!");
+            // alert("Duplicate Items found!");
+            alert("Item HSN / SAC should not be empty !")
         }else if(quan){
             alert("quantity cannot be zero or empty !");
         }else{
@@ -126,7 +127,10 @@ function goBack() {
                 <tr class="item-row">
                     <td></td>
                     <td class="border w-25" style="min-width: 150px;"><div style="display: flex;"><select style="text-transform: capitalize;" name="Item[]" id="selectItems" class="form-control item-select"><option value="">Select Item</option>{% for i in items %}<option value="{{i.id}}">{{i.name}}</option>{% endfor %}</select><button type="button" class="btn btn-outline-secondary text-grey ml-1" data-toggle="modal" data-target="#itemsModal">+</button></div></td>
-                    <td class="border" style="min-width: 150px;"><input name="hsn[]" type="text" class="form-control item-hsn" placeholder="Enter HSN" id="itemHSN"></td>
+                    <td class="border" style="min-width: 150px;">
+                        <input name="hsn[]" type="text" class="form-control item-hsn" placeholder="Enter HSN" id="itemHSN">
+                        <input name="sac[]" type="text" class="form-control item-sac" placeholder="Enter SAC" id="itemSAC" readonly style="display: none;">
+                    </td>
                     <td class="border" style="min-width: 150px;"><input name="qty[]" type="number" class="form-control item-qty mt-4" value="0"><small class="item-stockinlabel">Available Quantity : </small><small class="item-stockin">0</small></td>
                     <td class="border" style="min-width: 150px;"><input name="price[]" type="text" class="form-control item-price" placeholder="Enter price" id="itemPrice"></td>
                     <td class="border gst" style="min-width: 150px;display: none;" id="gst">
@@ -963,7 +967,10 @@ function goBack() {
                                                                 <tr class="item-row">
                                                                     <td></td>
                                                                     <td class="border w-25" style="min-width: 150px;"><div style="display: flex;"><select style="text-transform: capitalize;" name="Item[]" id="selectItems" class="form-control item-select"><option value="">Select Item</option>{% for i in items %}{% if itm.items_id == i.id %}<option selected value="{{i.id}}">{{i.name}}</option>{% else %}<option value="{{i.id}}">{{i.name}}</option>{% endif %}{% endfor %}</select><button type="button" class="btn btn-outline-secondary text-grey ml-1" data-toggle="modal" data-target="#itemsModal">+</button></div></td>
-                                                                    <td class="border" style="min-width: 150px;"><input name="hsn[]" type="text" class="form-control item-hsn" placeholder="Enter HSN" value="{{itm.hsn}}" id="itemHSN"></td>
+                                                                    <td class="border" style="min-width: 150px;">
+                                                                        <input name="hsn[]" type="text" class="form-control item-hsn" placeholder="Enter HSN" value="{{itm.hsn}}" id="itemHSN" style="{% if not itm.hsn %}display:none;{% endif %}">
+                                                                        <input name="sac[]" type="text" class="form-control item-sac" placeholder="Enter SAC" value="{{itm.sac}}" id="itemSAC" readonly style="{% if not itm.sac %}display:none;{% endif %}">
+                                                                    </td>
                                                                     <td class="border" style="min-width: 150px;"><input name="qty[]" type="number" class="form-control item-qty mt-4" value="{{itm.quantity}}"><small class="item-stockinlabel">Available Quantity : </small><small class="item-stockin">0</small></td>
                                                                     <td class="border" style="min-width: 150px;"><input name="price[]" type="text" class="form-control item-price" value="{{itm.price}}" placeholder="Enter price" id="itemPrice"></td>
                                                                     <td class="border gst" style="min-width: 150px;display: none;" id="gst">
@@ -1029,14 +1036,17 @@ function goBack() {
                                                         // ---------------------------------
                                                         function checkUniqueHSN() {
                                                         var hsnArray = [];
+                                                        var sacArray = [];
                                                         var duplicateFound = false;
 
                                                         // Loop through each row
                                                         $(".item-hsn").each(function() {
                                                             var hsn = $(this).val().trim();
+                                                            var sac = $(this).next().val().trim()
 
                                                             // Check if the HSN exists in the array
-                                                            if (hsnArray.indexOf(hsn) !== -1 && hsn !== "") {
+                                                            if (hsnArray.indexOf(hsn) !== -1 && hsn !== "" && hsnArray.indexOf(sac) !== -1 && sac !== "") {
+                                                                alert($(this).next().val())
                                                                 duplicateFound = true;
                                                                 return false; // Exit the loop if duplicate is found
                                                             }
@@ -1220,7 +1230,18 @@ $("#itemTable").on("change", ".item-select", function () {
         type: 'GET',
         success: function (data) {
             // Update the placeholder elements with the fetched details
-            $row.find(".item-hsn").val(data.hsn);
+            if(data.item_type==='Goods')
+            {
+                $row.find(".item-hsn").val(data.hsn);
+                $row.find(".item-hsn").show();
+                $row.find(".item-sac").hide();
+            }
+            else
+            {
+                $row.find(".item-sac").val(data.sac);
+                $row.find(".item-sac").show();
+                $row.find(".item-hsn").hide();
+            }
             $row.find(".item-stockin").data("initial", data.current_stock); // Store the initial value
             $row.find(".item-stockin").html(data.current_stock);
             $row.find(".item-gst_tax").val(data.gst_tax).change();
@@ -1314,6 +1335,7 @@ $("#priceListRB").on("click", function() {
                                                                 var item = {
                                                                     'items': $(this).find('.item-select').val(),
                                                                     'hsn': $(this).find('.item-hsn').val(),
+                                                                    'sac': $(this).find('.item-sac').val(),
                                                                     'quantity': quantity,
                                                                     'price': $(this).find('.item-price').val(),
                                                                     'tax_rate': $(this).find('.item-tax').val(),
@@ -1850,7 +1872,7 @@ $("#priceListRB").on("click", function() {
                                         <div class="modal-content" style="background-color: #213b52;">
                                             <div class="modal-header">
                                                 <h5 class="m-3">New Payment Term</h5>
-                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <button type="button" class="close" onclick="$('#newPaymentRe').modal('hide')" aria-label="Close">
                                                     <span aria-hidden="true">&times;</span>
                                                 </button>
                                             </div>
@@ -2123,7 +2145,7 @@ $("#priceListRB").on("click", function() {
                                                 <option value="{{p.id}}">{{p.term_name}}</option>
                                                 {% endfor %}
                                             </select>
-                                            <a href="#newPaymentTerm" data-toggle="modal" class="btn btn-outline-secondary ml-1">+</a>
+                                            <a data-target="#newPaymentTerm" onclick="$('#newPaymentTerm').modal('show');" data-toggle="modal" class="btn btn-outline-secondary ml-1">+</a>
                                         </div>
                                     </div>
             
@@ -2390,7 +2412,7 @@ $("#priceListRB").on("click", function() {
                     <div class="modal-content" style="background-color: #213b52;">
                         <div class="modal-header">
                             <h5 class="m-3">New Payment Term</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <button type="button" class="close" onclick="$('#newPaymentTerm').modal('hide');$('#vendorModal').modal('show')" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
@@ -3236,7 +3258,7 @@ $("#priceListRB").on("click", function() {
                     <div class="modal-content" style="background-color: #213b52;">
                         <div class="modal-header">
                             <h5 class="m-3">New Payment Term</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <button type="button" class="close" onclick="$('#newPaymentTerm2').modal('hide')" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
@@ -3725,10 +3747,15 @@ $("#priceListRB").on("click", function() {
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-md-6 mt-3">
+                            <div class="col-md-6 mt-3" id="hsnDiv">
                                 <label for="hsnField" style="color: white;">HSN Code</label>
                                 <input type="number" name="hsn" class="form-control" style="background-color: #2a4964; color: white;" placeholder="Enter a valid HSN code" required id="hsnField" oninput="validateHSN()">
                                 <div id="hsnError" style="color: red;"></div>
+                            </div>
+                            <div class="col-md-6 mt-3" id="sacDiv" style="display: none;">
+                                <label for="sacField" style="color: white;">SAC Code</label>
+                                <input type="number" name="sac" class="form-control" style="background-color: #2a4964; color: white;" placeholder="Enter a valid SAC code" id="sacField" oninput="validateSAC()">
+                                <div id="sacError" style="color: red;"></div>
                             </div>
                         </div>
                         <div class="row mt-3">
@@ -3925,7 +3952,7 @@ $("#priceListRB").on("click", function() {
         <div class="modal-content" style="background-color: #213b52;">
             <div class="modal-header">
                 <h5 class="m-3">New Item Unit</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" onclick="$('#createNewUnit').modal('hide')" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -3959,7 +3986,7 @@ $("#priceListRB").on("click", function() {
         <div class="modal-content" style="background-color: #213b52;">
             <div class="modal-header">
                 <h5 class="m-3">New Account</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" onclick="$('#createNewAccount').modal('hide')" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -4100,10 +4127,12 @@ $("#priceListRB").on("click", function() {
             errorText.innerText = "HSN must contain at least 6 digits";
             hsnField.setCustomValidity("HSN must contain at least 6 digits");
             hsnField.style.borderColor = "red";
+            return false
         } else {
             errorText.innerText = "";
             hsnField.setCustomValidity(""); 
             hsnField.style.borderColor = ""; 
+            return true
         }
     }
 
@@ -4464,5 +4493,49 @@ $(document).on("click","#saveNewAccount",function(){
     
 
 
+
+<script>
+    function validateSAC() {
+        var sacField = document.getElementById("sacField");
+        var errorText = document.getElementById("sacError");
+        var sacValue = sacField.value;
+
+        if (sacValue.length < 6) {
+            errorText.innerText = "SAC must contain at least 6 digits";
+            sacField.setCustomValidity("SAC must contain at least 6 digits");
+            sacField.style.borderColor = "red";
+            return false;
+        } else {
+            errorText.innerText = "";
+            sacField.setCustomValidity(""); 
+            sacField.style.borderColor = ""; 
+            return true;
+        }
+    }
+    $(document).ready(function(){
+        $('#itemType').on('input',function(){
+            if($(this).val()=== 'Goods' )
+            {
+                $('#sacField').val('');
+                $('#hsnField').prop('required',true);
+                $('#sacField').prop('required',false);
+                $('#hsnDiv').show();
+                $('#sacDiv').hide();
+                $('#sacError').text('');
+                $('#sacField').css({'border-color':'white'});
+            }
+            else
+            {
+                $('#hsnField').val('')
+                $('#hsnField').prop('required',false);
+                $('#sacField').prop('required',true);
+                $('#sacDiv').show();
+                $('#hsnDiv').hide();
+                $('#hsnError').text('');
+                $('#hsnField').css({'border-color':'white'});
+            }
+        })
+    })
+</script>
 
 {% endblock %}
