--- a/Finsys/Finsys_App/templates/company/RET_INV/Ret_Inv_Listout.html
+++ b/Finsys/Finsys_App/templates/company/RET_INV/Ret_Inv_Listout.html
@@ -46,7 +46,7 @@
                     </div>
                 
                    
-                        <a href="{% url 'Fin_Create_RET_INV'%}" class="ml-1"></i><button type="button" class="btn btn-outline-secondary text-grey"><i class="fa fa-plus font-weight-light"></i> New</button></a>
+                        <a href="{% url 'Fin_Create_RET_INV'%}" class="ml-1"></i><button type="button" class="btn btn-outline-secondary text-grey"><i class="fa fa-plus font-weight-light"></i> Retainer Invoice</button></a>
                     </a>
                 </div>
                
