--- a/Finsys/Finsys_App/templates/company/salarydetails/Fin_salarydetails.html
+++ b/Finsys/Finsys_App/templates/company/salarydetails/Fin_salarydetails.html
@@ -40,7 +40,7 @@
                 <a class="dropdown-item" href="{% url 'filter_by_status_draft' %}" style="height: 40px; font-size: 15px; color: white;cursor: pointer;">Draft</a>
               </div>
             </div>
-            <a href="{% url 'payroll_addsalarydetails' %}" class="ml-1"></i><button type="button" class="btn btn-outline-secondary text-grey"><i class="fa fa-plus font-weight-light"></i> New</button></a>
+            <a href="{% url 'payroll_addsalarydetails' %}" class="ml-1"></i><button type="button" class="btn btn-outline-secondary text-grey"><i class="fa fa-plus font-weight-light"></i> Salary</button></a>
           </div>
         </div>
       </div>
