--- a/Finsys/Finsys_App/templates/company/Employee_List.html
+++ b/Finsys/Finsys_App/templates/company/Employee_List.html
@@ -26,9 +26,18 @@
 </style>
 
     <div class="page-content ">
+
+        <div class="card radius-15 h-20">
+            <div class="row">
+              <div class="col-md-12">
+                <center><h2 class="mt-3">All Employee's</h2></center>
+                <hr/>
+              </div>
+            </div>
+          </div>
+
         <div class="card radius-15">
             <div class="card-body">
-                <center><h2>All Employee's </h2></center><br>
 
                 <div class="row">
                     <div class="col-3 ml-1">
@@ -51,7 +60,8 @@
 
                     <div class="col-4 ml-auto">
                         
-                        <button class="btn btn-outline-secondary text-grey" id="exportButton"><i class="fa fa-table"></i> Export To Excel</button>
+                        <div class="d-flex justify-content-end">
+                            <button class="btn btn-outline-secondary text-grey mr-1" id="exportButton"><i class="fa fa-table"></i> Export To Excel</button>
                         <!-- <button class="btn btn-secondary">Import</button> -->
                         <!-- <a class="btn btn-secondary dropdown-toggle" href="">Filter</a> -->
                         
@@ -66,7 +76,8 @@
                                 <a class="dropdown-item" style="cursor: pointer;" data-status="Inactive">Inactive</a>
                             </div>
 
-                            <a class="btn btn-outline-secondary text-grey" href="{% url 'employee_create_page' %}"><i class="fa fa-plus font-weight-light"></i> New </a>
+                            <a class="btn btn-outline-secondary text-grey ml-1" href="{% url 'employee_create_page' %}"><i class="fa fa-plus font-weight-light"></i> Employee </a>
+                        </div>
                           
                     </div>
                     
