--- a/Finsys/Finsys_App/templates/company/Employee_loan_list.html
+++ b/Finsys/Finsys_App/templates/company/Employee_loan_list.html
@@ -20,11 +20,20 @@
     }
 </style>
 <div class="page-content ">
+
+    <div class="card radius-15 h-20">
+        <div class="row">
+          <div class="col-md-12">
+            <center><h2 class="mt-3">All Employee Loans</h2></center>
+            <hr/>
+          </div>
+        </div>
+      </div>
+
     <div class="card radius-15">
          <div class="card-body">
-            <center><h2>All Employee Loans </h2></center><br>
             <div class="row">
-                <div class="col-3 ml-1">
+                <div class="col-2 ml-1">
                     <input type="search" placeholder="Search..." id="employeeSearchInput" onkeyup="searchEmployee()" class="form-control ">                         
                 </div>
                 <div class="dropdown show">
@@ -42,20 +51,22 @@
                     </div>
                 </div>
 
-                <div class="col-4 ml-auto">
-                    <button class="btn btn-outline-secondary text-grey" id="exportButton"><i class="fa fa-table"></i> Export To Excel</button>
-                    <a class="btn btn-outline-secondary dropdown-toggle text-grey" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="fa fa-filter"></i> filter by
-                    </a>
-                          
-                    <div class="dropdown-menu"  id="filter" >
-                        <a class="dropdown-item" style="cursor: pointer;" href="{% url 'employee_loan_list'  %}">All</a>
-                        <a class="dropdown-item" style="cursor: pointer;" href="{% url 'employee_loan_filter_by_active'  %}">Active</a>
-                        <a class="dropdown-item" style="cursor: pointer;" href="{% url 'employee_loan_filter_by_inactive'  %}">Inactive</a>
-                    </div>
+                <div class="col-5 ml-auto">
+                    <div class="d-flex justify-content-end">
+                        <button class="btn btn-outline-secondary text-grey mr-1" id="exportButton"><i class="fa fa-table"></i> Export To Excel</button>
+                        <a class="btn btn-outline-secondary dropdown-toggle text-grey" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="fa fa-filter"></i> filter by
+                        </a>
+                            
+                        <div class="dropdown-menu"  id="filter" >
+                            <a class="dropdown-item" style="cursor: pointer;" href="{% url 'employee_loan_list'  %}">All</a>
+                            <a class="dropdown-item" style="cursor: pointer;" href="{% url 'employee_loan_filter_by_active'  %}">Active</a>
+                            <a class="dropdown-item" style="cursor: pointer;" href="{% url 'employee_loan_filter_by_inactive'  %}">Inactive</a>
+                        </div>
 
-                    <a class="btn btn-outline-secondary text-grey" href="{% url 'employee_loan_create_page' %}"><i class="fa fa-plus font-weight-light"></i> New </a>
-                          
+                        <a class="btn btn-outline-secondary text-grey ml-1" href="{% url 'employee_loan_create_page' %}"><i class="fa fa-plus font-weight-light"></i> Employee Loan </a>
+                            
+                    </div>  
                 </div>
                     
             </div>
