--- a/Finsys/Finsys_App/templates/company/Fin_AddStockAdjustment.html
+++ b/Finsys/Finsys_App/templates/company/Fin_AddStockAdjustment.html
@@ -86,30 +86,24 @@
 </style>
 
 
-    <div class="page-content">
-        <div class="card radius-15">
-            <div class="card-body">
-                <div class="card-title">
-                    <center>
-                        <h2 class="mb-0" style="">NEW ADJUSTMENT</h2>
-
-                        
-                 
-                    </center>
-                  
-                </div>
-            </div>
+    <div class="page-content mt-0 pt-0 mb-0 pb-0">
+      <div class="d-flex justify-content-end mb-1">
+        <a href="{% url 'StockAdjustment' %}"><i class="fa fa-times-circle text-white mx-4 p-1" style="font-size: 1.2rem;margin-right: -0rem !important;"></i></a>
+      </div>
+      <div class="card radius-15 h-20 mb-0">
+        <div class="row">
+          <div class="col-md-12">
+            <center><h2 class="mt-3">NEW ADJUSTMENT </h2></center>
+            <hr/>
+          </div>
         </div>
+      </div>
+        
     </div>
 
- 
-    <br>
-
-    <div class="d-flex justify-content-end mb-1">
-      <a href="{% url 'StockAdjustment' %}"><i class="fa fa-times-circle text-white mx-4 p-1" style="font-size: 1.2rem;margin-left: -54px !important;"></i></a>
-    </div>
+    
     <form action="{% url 'create_stockadjustment' %}" method="POST" enctype="multipart/form-data">
-    <div class="page-content" style="margin-top:-2rem ;">
+    <div class="page-content" style="margin-top:-0rem ;">
       
         <div class="card radius-15">
             <div class="card-body">
