--- a/Finsys/Finsys_App/templates/company/Fin_Debit_Note_Add.html
+++ b/Finsys/Finsys_App/templates/company/Fin_Debit_Note_Add.html
@@ -1650,7 +1650,7 @@ $.ajax({
         <div class="modal-content" style="background-color: #213b52;">
             <div class="modal-header">
                 <h5 class="m-3">New Item Unit</h5>
-                <button type="button" class="close" data-toggle="modal" data-target="#newItem" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal"data-toggle="modal" data-target="#newItem" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -1684,7 +1684,7 @@ $.ajax({
         <div class="modal-content" style="background-color: #213b52;">
             <div class="modal-header">
                 <h5 class="m-3">New Account</h5>
-                <button type="button" class="close" data-toggle="modal" data-target="#newItem" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal"data-toggle="modal" data-target="#newItem" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -3639,7 +3639,7 @@ function reloadItems() {
         <div class="modal-content" style="background-color: #213b52;">
             <div class="modal-header">
                 <h5 class="m-3">New Vendor Payment Term</h5>
-                <button type="button" class="close" data-dismiss="modal"  data-target="#newVendor" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" onclick="$('#newVendor').modal('show')"  data-target="#newVendor" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
