--- a/Finsys/Finsys_App/templates/company/Fin_Edit_Item.html
+++ b/Finsys/Finsys_App/templates/company/Fin_Edit_Item.html
@@ -22,16 +22,28 @@
         border-radius: 0.5rem;
         position: relative
     }
-
+    .radius-15{
+        border-radius: 15px;
+    }
 </style>
 
 <div class="page-content">
+
+    <div class="card radius-15 h-20">
+        <div class="row">
+          <div class="col-md-12">
+            <center><h2 class="mt-3">EDIT ITEM</h2></center>
+            <hr/>
+          </div>
+        </div>
+      </div>
+
     <div class="card radius-15">
         <div class="card-body">
             <div class="row">
                 <div class="col-12 col-lg-12 col-xl-12">
                     <!-- <span class="d-flex justify-content-end p-2" style="cursor: pointer;" onclick="window.location.href=`{% url 'Fin_viewItem' item.id %}`"><i class="fa fa-times text-white" style="font-size: 1.2rem;"></i></span> -->
-                    <div class="card" style="background-color: #2a4964;">
+                    <!-- <div class="card" style="background-color: #2a4964;">
                         <div class="row no-gutters">
                             <div class="col-md-2"></div>
                             <div class="col-md-8 mt-4 mb-4">
@@ -40,7 +52,7 @@
                                 </center>
                             </div><br>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <form action="{% url 'Fin_updateItem' item.id %}" method="post" class="needs-validation"  validate>
