--- a/Finsys/Finsys_App/templates/company/Fin_Edit_Price_List.html
+++ b/Finsys/Finsys_App/templates/company/Fin_Edit_Price_List.html
@@ -15,17 +15,27 @@
         border-radius: 0.5rem;
         position: relative
     }
-
+    .radius-15{
+        border-radius: 15px;
+    }
 </style>
 
 <div class="page-content">
+    <div class="card radius-15 h-20">
+        <div class="row">
+          <div class="col-md-12">
+            <center><h2 class="mt-3">NEW PRICE LIST </h2></center>
+            <hr/>
+          </div>
+        </div>
+      </div>
     <div class="card radius-15">
         <div class="card-body">
             <div class="row">
                 <div class="col-12 col-lg-12 col-xl-12">
                     <!-- <span class="d-flex justify-content-end p-2" style="cursor: pointer;" onclick="javascript:window.history.back()"><i class="fa fa-times text-white" style="font-size: 1.2rem;"></i></span> -->
                     <div class="card" style="background-color: #2a4964;">
-                        <div class="row no-gutters">
+                        <!-- <div class="row no-gutters">
                             <div class="col-md-2"></div>
                             <div class="col-md-8 mt-4 mb-4">
                                 <center>
@@ -33,7 +43,7 @@
                                 </center>
                             </div>
                             <div class="col-md-2"></div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
