--- a/Finsys/Finsys_App/templates/company/Fin_Edit_Sales_Order.html
+++ b/Finsys/Finsys_App/templates/company/Fin_Edit_Sales_Order.html
@@ -420,7 +420,7 @@
         <div class="modal-content" style="background-color: #213b52;">
             <div class="modal-header">
                 <h5 class="m-3">New Customer Payment Term</h5>
-                <button type="button" class="close" data-toggle="modal" data-target="#newCustomer" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" data-toggle="modal" data-target="#newCustomer" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -847,7 +847,7 @@
         <div class="modal-content" style="background-color: #213b52;">
             <div class="modal-header">
                 <h5 class="m-3">New Item Unit</h5>
-                <button type="button" class="close" data-toggle="modal" data-target="#newItem" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" data-toggle="modal" data-target="#newItem" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -881,7 +881,7 @@
         <div class="modal-content" style="background-color: #213b52;">
             <div class="modal-header">
                 <h5 class="m-3">New Account</h5>
-                <button type="button" class="close" data-toggle="modal" data-target="#newItem" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" data-toggle="modal" data-target="#newItem" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
