--- a/Finsys/Finsys_App/templates/company/Fin_Recurring_Bill_Overview.html
+++ b/Finsys/Finsys_App/templates/company/Fin_Recurring_Bill_Overview.html
@@ -898,10 +898,10 @@ footer p {
                                             </div>
 
                                             <div class="col-md-3 mt-3 vl">
-                                                <h6 class="mb-0">HSN</h6>
+                                                <h6 class="mb-0">{% if j.items.item_type == 'Goods' %} HSN {% else %} SAC {% endif %}</h6>
                                             </div>
                                             <div class="col-md-3 mt-3">
-                                                <p class="mb-0 text-right">{{j.items.hsn}}</p>
+                                                <p class="mb-0 text-right">{% if j.items.item_type == 'Goods' %} {{ j.hsn }} {% else %} {{ j.sac }} {% endif %}</p>
                                             </div>
                                         </div>
                                         <div class="row mb-4 d-flex justify-content-between align-items-center">
