--- a/Finsys/Finsys_App/templates/company/Fin_Recurring_Invoice.html
+++ b/Finsys/Finsys_App/templates/company/Fin_Recurring_Invoice.html
@@ -40,7 +40,7 @@
                 <a class="dropdown-item" style="height: 40px; font-size: 15px; color: white;cursor: pointer;" onclick="filterTable(6,'saved')">Saved</a>
               </div>
             </div>
-            <a href="{% url 'Fin_addRecurringInvoice' %}" class="ml-1"></i><button type="button" class="btn btn-outline-secondary text-grey"><i class="fa fa-plus font-weight-light"></i> Rec. Invoice</button></a>
+            <a href="{% url 'Fin_addRecurringInvoice' %}" class="ml-1"></i><button type="button" class="btn btn-outline-secondary text-grey"><i class="fa fa-plus font-weight-light"></i> Recurring Invoice</button></a>
           </div>
         </div>
       </div>
