--- a/Finsys/Finsys_App/templates/company/Fin_Staff_Req.html
+++ b/Finsys/Finsys_App/templates/company/Fin_Staff_Req.html
@@ -4,6 +4,15 @@
 
 <div class="body-wrapper p-3">
     <div class="container-fluid">
+        <div class="card radius-15 h-20 mt-3">
+            <div class="row">
+              <div class="col-md-12">
+                <center><h2 class="mt-3">STAFF REQUESTS</h2></center>
+                <hr/>
+              </div>
+            </div>
+          </div>
+
         <div class="card radius-15">
             <a href="">
                 <div class="card-body">
