--- a/Finsys/Finsys_App/templates/company/Fin_StockAdjustment.html
+++ b/Finsys/Finsys_App/templates/company/Fin_StockAdjustment.html
@@ -29,25 +29,16 @@
 
 </style>
 
-
     <div class="page-content">
-        <div class="card radius-15">
-            <div class="card-body">
-                <div class="card-title">
-                    <center>
-                        <h2 class="mb-0" style="">ALL STOCK ADJUSTMENT</h2>
-                 
-                    </center>
-                    <hr>
-                </div>
+
+        <div class="card radius-15 h-20">
+            <div class="row">
+              <div class="col-md-12">
+                <center><h2 class="mt-3">ALL STOCK ADJUSTMENT</h2></center>
+                <hr/>
+              </div>
             </div>
-        </div>
-    </div>
-
- 
-
-
-    <div class="page-content">
+          </div>
         <div class="card radius-15">
             <div class="card-body">
               <div class="row">
@@ -85,7 +76,7 @@
               </div>
                
                 <div class="btn-group col-md-2 ">
-                  <a href="{% url 'AddStockAdjustment' %}"  class="btn btn-outline-secondary text-light " style="width: 20%; margin-top: 8px;" role="button"> <i class="fa fa-plus"></i> Add Adjustment</a>
+                  <a href="{% url 'AddStockAdjustment' %}"  class="btn btn-outline-secondary text-light " style="width: 20%; margin-top: 8px;" role="button"> <i class="fa fa-plus"></i>  Adjustment</a>
               </div>
 
             </div>
@@ -93,14 +84,14 @@
                 <div class="table-responsive">
                 <table class="table " id="myTable">
                     <thead>
-                      <tr class="text-center">
-                        <th scope="col">SL.No</th>
-                        <th scope="col" >Date</th>
-                        <th scope="col">Reason</th>
-                        <th scope="col">Description</th>
-                        <th scope="col" >Reference Number</th>
-                        <th scope="col">Type</th>
-                        <th scope="col">Status</th>
+                      <tr class="text-center" >
+                        <th scope="col">SL.NO</th>
+                        <th scope="col" >DATE</th>
+                        <th scope="col">REASON</th>
+                        <th scope="col">DESCRIPTION</th>
+                        <th scope="col" >REFERENCE NUMBER</th>
+                        <th scope="col">TYPE</th>
+                        <th scope="col">STATUS</th>
                       </tr>
                     </thead>
       
