--- a/Finsys/Finsys_App/templates/company/Fin_edit_payment_received.html
+++ b/Finsys/Finsys_App/templates/company/Fin_edit_payment_received.html
@@ -254,7 +254,7 @@
         <div class="modal-content" style="background-color: #213b52;">
             <div class="modal-header">
                 <h5 class="m-3">New Customer Payment Term</h5>
-                <button type="button" class="close" data-toggle="modal" data-target="#newCustomer" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" data-toggle="modal" data-target="#newCustomer" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
