--- a/Finsys/Finsys_App/templates/company/Holiday_List.html
+++ b/Finsys/Finsys_App/templates/company/Holiday_List.html
@@ -26,10 +26,18 @@
 </style>
     <!-- <div style="float: right;font-size: larger;" class="mr-5">Company : {{companyName}}</div> -->
     <div class="page-content ">
-        <div class="card radius-15">
+        <div class="card radius-15 h-20" >
+            <div class="row">
+              <div class="col-md-12">
+                <center><h2 class="mt-3">ALL HOLIDAYS</h2></center>
+                <hr/>
+              </div>
+            </div>
+          </div>
+
+        <div class="card radius-15" >
             
             <div class="card-body">
-                <center><h2>ALL HOLIDAYS </h2></center><br>
                 
                 <div class="row">
                     <div class="col-3 ml-1">
@@ -48,17 +56,19 @@
                         </div>
                       </div>
 
-                    <div class="col-3 ml-auto">
-                        <button class="btn btn-outline-secondary text-grey" id="exportButton"><i class="fa fa-table"></i> Export To Excel</button>
-                        <a class="btn btn-outline-secondary text-grey" href="{% url 'holiday_create_page' %}"><i class="fa fa-plus font-weight-light"></i> New </a>
+                    <div class="col-7 ml-auto">
+                        <div class="d-flex justify-content-end">
+                            <button class="btn btn-outline-secondary text-grey mr-1" id="exportButton"><i class="fa fa-table"></i> Export To Excel</button>
+                            <a class="btn btn-outline-secondary text-grey" href="{% url 'holiday_create_page' %}"><i class="fa fa-plus font-weight-light"></i> Holiday </a>
+                        </div>
                     </div>
                     
                 </div>
 
                 <br><br><br>
 
-                <div class="table-responsive" >
-                    <table class="table ml-3" style="width: 95%;text-align: center;" id="holiday">
+                <div class="table-responsive" style="overflow: hidden;">
+                    <table class="table ml-3" style="width: 100%;text-align: center;" id="holiday">
                         <thead>
                             <tr>
                                 <th>Sl No.</th>
