--- a/Finsys/Finsys_App/templates/company/RET_INV/RET_INV_edit.html
+++ b/Finsys/Finsys_App/templates/company/RET_INV/RET_INV_edit.html
@@ -386,7 +386,7 @@ textarea::-webkit-scrollbar-thumb:hover {
         <div class="modal-content" style="background-color: #213b52;">
             <div class="modal-header">
                 <h5 class="m-3">New Customer Payment Term</h5>
-                <button type="button" class="close" data-toggle="modal" data-target="#newcustomer" aria-label="Close">
+                <button type="button" class="close"data-dismiss="modal" data-toggle="modal" data-target="#newcustomer" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -823,7 +823,7 @@ textarea::-webkit-scrollbar-thumb:hover {
         <div class="modal-content" style="background-color: #213b52;">
             <div class="modal-header">
                 <h5 class="m-3">New Item Unit</h5>
-                <button type="button" class="close" data-toggle="modal" data-target="#newitem" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" data-toggle="modal" data-target="#newitem" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -857,7 +857,7 @@ textarea::-webkit-scrollbar-thumb:hover {
         <div class="modal-content" style="background-color: #213b52;">
             <div class="modal-header">
                 <h5 class="m-3">New Account</h5>
-                <button type="button" class="close" data-toggle="modal" data-target="#newitem" aria-label="Close">
+                <button type="button" class="close"data-dismiss="modal" data-toggle="modal" data-target="#newitem" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
