--- a/Finsys/Finsys_App/templates/company/banking/Fin_banking_listout.html
+++ b/Finsys/Finsys_App/templates/company/banking/Fin_banking_listout.html
@@ -5,20 +5,15 @@
 
 
 <div class="page-content">
-    <div class="card radius-15 h-20">
-        <div class="row">
-            <div class="col-md-12">
-                <center>
-                    <h2 class="mt-3">BANKING</h2>
-                </center>
 
-                <hr style="width:95%">
-                <!-- <div class="btn-group col-md-2" style="float: right;"> -->
-            </div>
-        </div>
+<div class="card radius-15 h-20">
+    <div class="row">
+      <div class="col-md-12">
+        <center><h2 class="mt-3">BANKING</h2></center>
+        <hr/>
+      </div>
     </div>
-</div>
-
+  </div>
 
 <div class="card radius-15">
     <div class="card-body">
@@ -37,9 +32,9 @@
                                 <button class="btn btn-search" type="button"><i class="lni lni-search-alt"></i></button>
                             </div> -->
                             <div class="dropdown ml-2">
-                                <button type="button" class=" fa fa-sort btn btn-outline-info dropdown-toggle text-grey"
+                                <button type="button" class=" fa fa-sort btn btn-outline-secondary dropdown-toggle text-grey"
                                     data-toggle="dropdown" style="height: 37px;">&nbsp;&nbsp;Sort By</button>
-                                <div class="dropdown-menu" style="background-color: #2f516f;">
+                                <div class="dropdown-menu" style="background-color: black">
                                     <a class="dropdown-item" href="{% url 'Fin_banking_listout' %}"
                                         style=" font-size: 15px; color: white;">All </a>
 
@@ -57,11 +52,11 @@
 
                 <div class="col-md-6 d-flex justify-content-end">
                     <div class="d-flex align-items-center">
-                        <a class=" btn btn-outline-info text-grey" onclick="ExportToExcel()"><span class="fa fa-file-excel" aria-hidden="true"></span>
+                        <a class=" btn btn-outline-secondary text-grey" onclick="ExportToExcel()"><span class="fa fa-file-excel" aria-hidden="true"></span>
                             Export To Excel</a>
                 
                         <div class="dropdown ml-2">
-                            <button type="button" class="fa fa-filter btn btn-outline-info text-grey " style="height: 37px; "
+                            <button type="button" class="fa fa-filter btn btn-outline-secondary text-grey " style="height: 37px; "
                                 data-toggle="dropdown">
                                 <a href="#" class="text-white" >Filter By</a>
                             </button>
@@ -76,8 +71,8 @@
                         </div>
                 
                         <div class="dropdown ml-2">
-                            <button type="button" class="btn btn-outline-info text-grey">
-                                <a href="{% url 'Fin_create_bank' %}">+ Add Bank</a>
+                            <button type="button" class="btn btn-outline-secondary text-grey">
+                                <a href="{% url 'Fin_create_bank' %}">+  Bank</a>
                             </button>
                         </div>
                     </div>
