--- a/Finsys/Finsys_App/templates/company/banking/Fin_create_bank.html
+++ b/Finsys/Finsys_App/templates/company/banking/Fin_create_bank.html
@@ -4,25 +4,20 @@
 
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
-<div class="text-right">
-    <a href="{% url 'Fin_banking_listout' %}" class="btn-sm  px-2" ><i class="fa fa-times"></i></a>
-</div>
-<div class="card radius-15 h-20">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="row">
-                <div class="col-md-12">
-                    <center>
-                        <h2 class="mt-3">CREATE BANK</h2>
-                    </center>
-                </div>
-               
-            </div>
-            <hr style="width:95%">
+
+<div class="page-content py-0 my-0">
+
+    <div class="d-flex justify-content-end mb-1">
+        <a href="{% url 'Fin_banking_listout' %}"><i class="fa fa-times-circle text-white mx-4 p-1" style="font-size: 1.2rem;margin-right: -0rem !important;"></i></a>
+      </div>
+    <div class="card radius-15 h-20">
+        <div class="row">
+          <div class="col-md-12">
+            <center><h2 class="mt-3">CREATE BANK</h2></center>
+            <hr/>
+          </div>
         </div>
-    </div>
-</div>
-<div class="page-content">
+      </div>
 
     <div class="card radius-15">
         <div class="card-body">
