--- a/Finsys/Finsys_App/templates/company/loan_account/loan_Create_Page.html
+++ b/Finsys/Finsys_App/templates/company/loan_account/loan_Create_Page.html
@@ -478,7 +478,8 @@
         <div class="modal-content " style="background-color: #213b52;">
             <div class="modal-header">
                 <h5 class="m-3" id="bankModalLabel">Add Bank</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close"> -->
+                <button type="button" class="close" onclick="$('#bankholdercreation').modal('hide');" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
